# franka-fr3-robot-learning

./: .gitignore  README.md
docs/: RECORDING_GUIDE.md  SCRIPT_GUIDE.md
fr3_real/: .~lock.fr3_100_cell_tracker.xlsx#  README.md  __init__.py  additional_50_cells.json  check_cartesian_axes.py  check_touch_frame.py  convert_raw_recordings_to_lerobot.py  create_grid_tracker.py  filter_cells_by_tracker_status.py  filter_grid_tracker.py  fr3_100_cell_tracker.xlsx  fr3_additional_50_cell_tracker.xlsx  fr3_additional_50_working_tracker.xlsx  fr3_working_cell_tracker.xlsx  fr3_working_cell_tracker_additional.xlsx  franka_motion.py  grid_utils.py  indicate_and_confirm.py  manual_fr3_policy_grasp.py  next_cell_to_record.txt  paths.py  pick_and_place.py  probe_points.py  probed_points.json  probed_points.md  realsense_recorder.py  repo_paths.py  reset_to_recorded_policy_start.py  run_fr3_policy_eval_trial.py  run_streaming_validation_batch.py  run_streaming_validation_trial.py  test_connection.py  test_fr3_policy_server.py  test_grasp_cycle.py  test_realsense_recording.py  working_cells.json
fr3_real/camera/: __init__.py  preview_realsense.py  test_realsense_recording.py
fr3_real/common/: __init__.py  franka_motion.py  grid_utils.py  realsense_recorder.py
fr3_real/config/: environment-fr3-recording.yml
fr3_real/configs/: all_working_cells.json  environment-fr3-recording.yml  fr3_100_cell_tracker.xlsx  fr3_all_working_cell_tracker.xlsx  fr3_manual_live_R02.json  fr3_training_cell_smoke_v1.json  next_cell_to_record.txt  next_cell_to_record_v3.txt  next_targeted_v2_cell.txt  next_targeted_v3_cell.txt  probed_points.json  targeted_v2_smoke_audit.json  targeted_v3_audit.json
fr3_real/data-pipeline/: build_fr3_phase_sampling_manifest.py  create_grid_tracker.py  (+8 more)
fr3_real/model-running/streaming/: CMakeLists.txt  fr3_joint_velocity_streamer.cpp  replay_recorded_velocity_chunks.py  stream_policy_chunks.py  stream_protocol.py  test_reference_limiter.cpp  test_stream_protocol.py  warm_policy_server.py
openpi-client/: pyproject.toml
requirements/: fr3-recording.txt
setup/: bootstrap_fr3_environment.sh  verify_fr3_setup.py
(+85 files in other folders)
